examples/k8s/ingress-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-demo
  namespace: ingress-demo
spec:
  selector:
    app: ingress-demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
